# kinguin_tl

./: .gitignore  README.md  pyproject.toml  run.ps1
docs/: INSTALL.md
src/: main.py
src/app/: __init__.py  gsheet_cache_manager.py  test.py
src/app/crwl/: __init__.py  crwl.py  exceptions.py
src/app/gsheet_cache/: README.md  __init__.py  config.py  manager.py  schemas.py  sheet.py  utils.py
src/app/kinguin/: __init__.py  api.py
src/app/models/: api_models.py  crwl_models.py  gsheet_model.py  prices.py
src/app/prices/: __init__.py  models.py  utils.py
src/app/processes/: __init__.py  crwl.py  main_process.py  process.py  shared.py
src/app/service/: data_cache.py
src/app/shared/: config.py  consts.py  enums.py  exceptions.py  utils.py
src/app/sheet/: __init__.py  g_sheet.py  models.py  utils.py
src/app/utils/: browser_manager.py  config.py  kinguin_client.py  price_utils.py  update_messages.py
