[project]
name = "kinguin-tl"
version = "0.1.0"
description = "Tool"
dependencies = [
    "gspread>=6.1.4",
    "seleniumbase>=4.33.14",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
]

requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
test = "python src/app/test.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
